--- a/cloud2020/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud2020/cloud-provider-payment8001/src/main/resources/application.yml
@@ -10,7 +10,9 @@ spring:
     url: jdbc:mysql://localhost:3306/db2019?useUnicode=true&characterEncoding=utf-8&userSSL=false
     username: root
     password: 123456
-
+#  devtools:
+#    restart:
+#      enabled: true
 mybatis:
   mapper-locations: classpath:mapper/*.xml
   type-aliases-package: com.sn.springcloud.entities #所有entity别名类所在包
